# AgentHandover

./: .gitignore  13MarchPlan.md  CLAUDE.md  Cargo.toml  LISTS.md  LOG.md  OpenMimic.md  OpenMimicBible.md  README.md  ROADMAP.md  config.example.toml  justfile
crates/storage/: Cargo.toml
crates/storage/src/: artifact_store.rs  lib.rs  maintenance.rs  schema.rs
crates/storage/tests/: maintenance_test.rs  storage_test.rs
crates/test-harness/: Cargo.toml
crates/test-harness/src/: lib.rs  pipeline.rs  recorder.rs  replayer.rs
crates/test-harness/tests/: artifact_test.rs  harness_test.rs  pipeline_test.rs  privacy_test.rs
worker/: pyproject.toml
worker/src/agenthandover_worker/: activity_classifier.py  agent_connect.py  behavioral_synthesizer.py  bundle_compiler.py  claude_skill_writer.py  correction_detector.py  daily_processor.py  db.py  decision_extractor.py  evidence_extractor.py  export_adapter.py  main.py  (+23 more)
worker/tests/: test_activity_classifier.py  test_activity_search.py  test_bundle_compiler.py  test_claude_skill_writer.py  test_cleanup.py  test_clipboard_linker.py  test_confidence.py  test_confidence_evidence.py  test_correction_detector.py  test_css_filter.py  test_daily_processor.py  test_decision_extractor.py  test_deep_scan.py  test_episode_builder.py  test_episode_builder_enhanced.py  test_export_adapter.py  test_exporter.py  test_exporter_enhanced.py  test_focus_processor.py  test_focus_questioner.py  test_frame_differ.py  test_handoff_conformance.py  test_integration_full_pipeline.py  test_knowledge_export_adapter.py  test_main_pipeline.py  test_native_app_boost.py  test_negative_demo.py  test_openclaw_writer.py  test_outcome_tracker.py  test_scene_annotator.py  test_semantic_step.py  test_session_linker.py  test_setup_vlm.py  test_skill_md_writer.py  test_sop_dedup.py  test_sop_drift.py  test_sop_enhancer.py  test_sop_format.py  test_sop_generator.py  test_sop_inducer.py  (+9 more)
(+331 files in other folders)
